--- a/src/Michael/components/Table/style.css
+++ b/src/Michael/components/Table/style.css
@@ -1,48 +1,48 @@
-.m-table-container {
+.mtable-container {
     width: 100%;
     overflow-y: auto;
 }
 
-.m-table {
+.mtable {
     width: 100%;
     height: 92%;
     text-align: left;
     border-collapse: collapse;
 }
 
-.m-row-container {
+.mrow-container {
     height: 45px;
     border-bottom: 1px solid lightgrey;
 }
 
-.m-checkbox-column {
+.mcheckbox-column {
     padding: 0 10px;
-    width: 35px;
 }
-.m-tfoot {
+.mtfoot {
     display: flex;
+    align-items: flex-end;
     justify-content: flex-end;
     padding-top: 10px;
     padding-right: 50px;
 }
-.m-switch-left {
+.mswitch-left {
     border: 0;
     margin-right: 10px;
     background-color: white;
     cursor: pointer;
 }
-.m-switch-left:hover {
+.mswitch-left:hover {
     background-color: lightgrey;
 }
-.m-switch-right {
+.mswitch-right {
     border: 0;
     background-color: white;
     cursor: pointer;
 }
-.m-switch-right:hover {
+.mswitch-right:hover {
     background-color: lightgrey;
 }
-.m-select-amount-row {
+.mselect_amount_row {
     margin-left: 5px;
     background-color: lightgray;
     border: 0;
@@ -50,18 +50,18 @@
     height: 30px;
     cursor: pointer;
 }
-.wrapper-m-select-amount-row {
+.wrapper_mselect_amount_row {
     margin-right: 30px;
 }
-.counter-page {
+.counter_page {
     margin-right: 30px;
 }
-.disable-m-switch-left {
+.disable_mswitch-left {
     border: 0;
     background-color: white;
     margin-right: 10px;
 }
-.disable-m-switch-right {
+.disable_mswitch-right {
     border: 0;
     background-color: white;
 
