--- a/src/Michael/components/Table/Dropdowns/LimitDropdown/style.css
+++ b/src/Michael/components/Table/Dropdowns/LimitDropdown/style.css
@@ -1,4 +1,4 @@
-.mwrapper_dropdown_limit {
+.m-wrapper-dropdown-limit {
     display: flex;
     flex-direction: column;
     width: 40px;
@@ -10,13 +10,13 @@
     margin-left: 113px ;
     box-shadow: 2px 5px 5px 5px lightgrey;
 }
-.mdropdown_limit_item {
+.m-dropdown-limit-item {
     border: 0;
     width: 100%;
     height: 100%;
     background-color: white;
 }
-.mdropdown_limit_item:hover {
+.m-dropdown-limit-item:hover {
     opacity: 0.7;
     cursor: pointer;
     background-color: lightgrey;
