--- a/src/Michael/components/Table/style.css
+++ b/src/Michael/components/Table/style.css
@@ -1,67 +1,73 @@
-.mtable-container {
+.m-table-container {
     width: 100%;
+}
+
+.m-table {
+    width: 100%;
+    height: calc(100% - 100px);
+    text-align: left;
+    border-collapse: collapse;
     overflow-y: auto;
 }
 
-.mtable {
-    width: 100%;
-    height: 92%;
-    text-align: left;
-    border-collapse: collapse;
-}
-
-.mrow-container {
+.m-row-container {
     height: 45px;
     border-bottom: 1px solid lightgrey;
 }
+.m-column-container {
+    width: 50px;
+}
 
-.mcheckbox-column {
+.m-checkbox-column {
     padding: 0 10px;
 }
-.mtfoot {
+.m-tfoot {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-end;
-    padding-top: 10px;
-    padding-right: 50px;
+    padding-top: 20px;
+    padding-right: 30px;
 }
-.mswitch-left {
+.m-switch-left {
     border: 0;
     margin-right: 10px;
     background-color: white;
     cursor: pointer;
 }
-.mswitch-left:hover {
+.m-switch-left:hover {
     background-color: lightgrey;
 }
-.mswitch-right {
+.m-switch-right {
     border: 0;
     background-color: white;
     cursor: pointer;
 }
-.mswitch-right:hover {
+.m-switch-right:hover {
     background-color: lightgrey;
 }
-.mselect_amount_row {
+.m-select-amount-row {
     margin-left: 5px;
     background-color: lightgray;
     border: 0;
     width: 40px;
     height: 30px;
     cursor: pointer;
+
 }
-.wrapper_mselect_amount_row {
+.wrapper-m-select-amount-row {
+    margin-right: 30px;
+    display: flex;
+    align-items: center;
+}
+.counter-page {
     margin-right: 30px;
 }
-.counter_page {
-    margin-right: 30px;
-}
-.disable_mswitch-left {
+.disable-m-switch-left {
     border: 0;
     background-color: white;
     margin-right: 10px;
 }
-.disable_mswitch-right {
+.disable-m-switch-right {
     border: 0;
     background-color: white;
 
