--- a/src/Michael/components/TagsInput/style.css
+++ b/src/Michael/components/TagsInput/style.css
@@ -3,7 +3,7 @@
     align-items: center;
 }
 .m-tags-input {
-    width: 400px;
+    max-width: 400px;
     height: 30px;
     background-color: #202020;
     border-radius: 5px;
@@ -40,4 +40,5 @@
 .m-tags-input-icon:hover {
     cursor: pointer;
     opacity: 0.7;
+    color: red;
 }
