--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #edeef0;
   padding: 20px;
+
+}
+
+* {
   box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.styled-modal {
+  border-radius: 5px !important;
 }
