Copied tabs and columns. Made a choice of columns. I made a modal cookie window. Dropped the watch.

--- a/src/Oleg/components/Dropdown/ElementList/styles.css
+++ b/src/Oleg/components/Dropdown/ElementList/styles.css
@@ -1,3 +1,9 @@
 .o-dropdown-checkbox {
     cursor: pointer;
 }
+
+.o-dropdown-list-element {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
