--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #edeef0;
   padding: 20px;
+}
+
+* {
   box-sizing: border-box;
+
 }
 
 code {
