--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -6,6 +6,7 @@
     height: 100vh;
     background: black;
     opacity: 0.5;
+    z-index: 9999;
 }
 
 .modal-window {
@@ -17,6 +18,7 @@
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
+    z-index: 10000;
 }
 
 .modal-header {
