--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -6,8 +6,9 @@
     padding: 10px 14px;
     text-transform: uppercase;
     font-weight: 600;
-    letter-spacing: 1px;
-    color: white
+    letter-spacing: 1px;;
+    color:white;
+    background-color: blue;
 }
 
 .button-wrapper:hover {
